--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ background-image: linear-gradient(43deg, #d0cc41 0%, #d8d13a 46%, #ffb570 100%);
     <h1>Speak like Minions!</h1>
     <hr>
     <img style="margin-left: 580px;" src="/images/minion.png" alt="no image found">
-    <textarea style="margin-left: 140px;" id="txt-input" placeholder="Type your sentence in English and we will convert it to Shakespearen English"></textarea>
+    <textarea style="margin-left: 140px;" id="txt-input" placeholder="Type your sentence in English and we will convert it to Minions language"></textarea>
     <button style="margin-left: 680px; border-radius: 2rem; display: block; height: 5vh; width: 5vw; cursor: pointer;" id="btn-translate;">Translate</button>
     <br>
     <div style="font-size: larger;color: rgb(110, 77, 27); text-align: center;">After translation the text is 👇 </div>
