--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PiratesOfOcean</title>
+    <title>Minions</title>
     <style>
         body {
             height: 100vh;
@@ -38,14 +38,14 @@ background-image: linear-gradient(43deg, #d0cc41 0%, #d8d13a 46%, #ffb570 100%);
     
 </head>
 <body>
-    <h1>Speak like Minions!</h1>
+    <h1 style="margin-left: 100px;">Speak like Minions!</h1>
     <hr>
-    <img style="margin-left: 580px;" src="/images/minion.png" alt="no image found">
+    <img style="margin-left: 640px;" src="/images/minion.png" alt="no image found">
     <textarea style="margin-left: 140px;" id="txt-input" placeholder="Type your sentence in English and we will convert it to Minions language"></textarea>
-    <button style="margin-left: 680px; border-radius: 2rem; display: block; height: 5vh; width: 5vw; cursor: pointer;" id="btn-translate;">Translate</button>
+    <button style="margin-left: 680px; border-radius: 2rem;width: 15vw; height: 5vh; display: block;" id="btn-translate">Translate</button>
     <br>
-    <div style="font-size: larger;color: rgb(110, 77, 27); text-align: center;">After translation the text is 👇 </div>
-    <div style="margin-left: 120px; color: rgb(110, 77, 27); border: 2px dashed brown ;" id="output"></div>
+    <div style="margin-left: 100px; font-size: larger;color: rgb(110, 77, 27); text-align: center;">After translation the text is 👇 </div>
+    <div style="margin-left: 140px; color: rgb(110, 77, 27); border: 2px dashed brown ; height: 4vh;" id="output"></div>
 
 
 
